# rust-i18n

./: Cargo.toml  README.md
crates/extract/: Cargo.toml
crates/extract/src/: example.test.rs  extractor.rs  generator.rs  iter.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  tests.rs
crates/support/: Cargo.toml
crates/support/src/: lib.rs  tests.rs
examples/app/: main.rs
examples/foo/: Cargo.toml  build.rs
examples/foo/locales/: en.yml  foo-bar-baz
examples/foo/src/: info.rs  lib.rs
src/: config.rs  lib.rs  main.rs
tests/: intergartion_test.rs
