[workspace]
members = ["crates/extract", "crates/macro", "crates/support"]


[package]
name = "rust-i18n"
version = "1.0.0"
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "Rust I18n is use Rust codegen for load YAML file storage translations on compile time, and give you a format_t! macro for simply get translation texts."
categories = ["localization", "internationalization"]
edition = "2021"
exclude = ["crates", "tests"]
keywords = ["i18n", "yml", "localization", "internationalization"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/longbridgeapp/rust-i18n"
build = "build.rs"

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "2.32", optional = true }
itertools = { version = "0.10.3", optional = true }
once_cell = "1.10.0"
quote = { version = "1", optional = true }
rust-i18n-extract = { path = "./crates/extract", version = ">=1.0.0", optional = true }
rust-i18n-macro = { path = "./crates/macro", version = ">=1.0.0" }
serde = "1"
serde_derive = "1"
toml = "0.5.8"
fs-err = "2.9"

[dev-dependencies]
foo = { path = "examples/foo" }

[features]
default = ["rust-i18n-extract", "clap", "anyhow", "quote", "itertools"]

[build-dependencies]
glob = "0.3"
regex = "1"

[[example]]
name = "app"
test = true

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
required-features = ["default"]
