[package]
name = "foo"
version = "0.1.0"
edition = "2021"
private = true

[dependencies]
once_cell = "1.10.0"
rust-i18n = { path = "../.." }

[dev-dependencies]
rust-i18n-build = { path = "../../crates/build" }

[build-dependencies]
rust-i18n-build = { path = "../../crates/build" }

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
