[package]
name = "foo"
version = "0.1.0"
edition = "2021"
private = true

[dependencies]
once_cell = "1.10.0"
rust-i18n = { path = "../.." }
fs-err = "2.9"

[dev-dependencies]
rust-i18n-support = { path = "../../crates/support" }

[build-dependencies]
rust-i18n-support = { path = "../../crates/support" }

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
